tests/e2e/semantics/output_assignment_existing_var2.story
x = 1
foreach [1, 2, 3] as i, x
    a = 1
